@@ -28,6 +28,7 @@ Suggests: libboost1.62-doc,
  libboost-coroutine1.62-dev [any-i386 any-amd64 armel armhf arm64 mips mipsel powerpc ppc64el],
  libboost-date-time1.62-dev,
  libboost-exception1.62-dev,
+ libboost-fiber1.62-dev [any-i386 any-amd64 armel armhf arm64 mips mipsel powerpc ppc64el],
  libboost-filesystem1.62-dev,
  libboost-graph1.62-dev,
  libboost-graph-parallel1.62-dev,
@@ -65,11 +66,6 @@ Description: Boost C++ Libraries development files
  Extended precision arithmetic package libmpfrc++-dev or libntl-dev is
  required to use the Boost.Multiprecision wrapping of the respective
  library.
- .
- For the following subprojects separate packages exist: chrono,
- date-time, exception filesystem, graph, iostreams, locale, math, mpi,
- program_options, python, regex, serialization, signals, system, test,
- thread, timer, and wave.
 
 Package: libboost1.62-tools-dev
 Architecture: any
@@ -108,6 +104,7 @@ Depends: ${misc:Depends},
  libboost-coroutine1.62-dev [any-i386 any-amd64 armel armhf arm64 mips mipsel powerpc ppc64el],
  libboost-date-time1.62-dev,
  libboost-exception1.62-dev,
+ libboost-fiber1.62-dev [any-i386 any-amd64 armel armhf arm64 mips mipsel powerpc ppc64el],
  libboost-filesystem1.62-dev,
  libboost-graph1.62-dev,
  libboost-graph-parallel1.62-dev,
@@ -441,6 +438,63 @@ Description: library to help write exceptions and handlers
  class hierarchies and to help write exception handling and error
  reporting code.
 Conflicts: libboost-exception1.50-dev, libboost-exception1.52-dev, libboost-exception1.53-dev, libboost-exception1.54-dev, libboost-exception1.55-dev, libboost-exception1.57-dev, libboost-exception1.58-dev, libboost-exception1.60-dev, libboost-exception1.61-dev
+
+Package: libboost-fiber1.62.0
+Homepage: http://www.boost.org/libs/fiber/
+Architecture: any
+Multi-Arch: same
+Section: libs
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Pre-Depends: ${misc:Pre-Depends}
+Description: cooperatively-scheduled micro-/userland-threads
+ This package forms part of the Boost C++ Libraries collection.
+ .
+ Boost.Fiber provides a framework for micro-/userland-threads (fibers) scheduled cooperatively.
+ The API contains classes and functions to manage and synchronize fibers similiarly to standard thread support library.
+ .
+ Each fiber has its own stack.
+ .
+ A fiber can save the current execution state, including all registers
+ and CPU flags, the instruction pointer, and the stack pointer and
+ later restore this state. The idea is to have multiple execution
+ paths running on a single thread using cooperative scheduling (versus
+ threads, which are preemptively scheduled). The running fiber decides
+ explicitly when it should yield to allow another fiber to run
+ (context switching). Boost.Fiber internally uses execution_context
+ from Boost.Context; the classes in this library manage, schedule and,
+ when needed, synchronize those execution contexts. A context switch
+ between threads usually costs thousands of CPU cycles on x86,
+ compared to a fiber switch with less than a hundred cycles. A fiber
+ runs on a single thread at any point in time.
+
+Package: libboost-fiber1.62-dev
+Homepage: http://www.boost.org/libs/fiber/
+Architecture: any
+Multi-Arch: same
+Section: libdevel
+Depends: ${misc:Depends},
+ libboost1.62-dev (= ${binary:Version}),
+ libboost-fiber1.62.0 (= ${binary:Version})
+Description: cooperatively-scheduled micro-/userland-threads
+ This package forms part of the Boost C++ Libraries collection.
+ .
+ Boost.Fiber provides a framework for micro-/userland-threads (fibers) scheduled cooperatively.
+ The API contains classes and functions to manage and synchronize fibers similiarly to standard thread support library.
+ .
+ Each fiber has its own stack.
+ .
+ A fiber can save the current execution state, including all registers
+ and CPU flags, the instruction pointer, and the stack pointer and
+ later restore this state. The idea is to have multiple execution
+ paths running on a single thread using cooperative scheduling (versus
+ threads, which are preemptively scheduled). The running fiber decides
+ explicitly when it should yield to allow another fiber to run
+ (context switching). Boost.Fiber internally uses execution_context
+ from Boost.Context; the classes in this library manage, schedule and,
+ when needed, synchronize those execution contexts. A context switch
+ between threads usually costs thousands of CPU cycles on x86,
+ compared to a fiber switch with less than a hundred cycles. A fiber
+ runs on a single thread at any point in time.
 
 Package: libboost-filesystem1.62.0
 Homepage: http://boost.org/libs/filesystem/
